Additional argument of post/post_id resource
